# N-PEARL

./: Cargo.toml  README.md  katex-header.html
.github/workflows/: rustdoc.yml
model/: deploy.qnn
src/: cube.rs  fluor.rs  lib.rs
